--- a/html/recovering-histories/botswana/liv_022004_HTML.html
+++ b/html/recovering-histories/botswana/liv_022004_HTML.html
@@ -80,10 +80,10 @@ I <span class="small">HAVE</span> the honour to enclose, for your information, a
 I have received from Sir Charles Warren, covering reports of interviews with the
 Chiefs Ghasitsive, Sechele, and Khama.
 
-I have, &c.,
+I have, &amp;c.,
 (Signed) <span class="caps">HERCULES ROBINSON</span>,
 The Right Hon. the Earl of Derby, K.G., High Commissioner.
-&c. &c. &c.
+&amp;c. &amp;c. &amp;c.
 
 Enclosure in No. 34.
 S<span class="small">IR</span> C. W<span class="small">ARREN</span> to H<span class="small">IGH</span> C<span class="small">OMMISSIONER</span>.
@@ -105,11 +105,11 @@ F. Account of interview between Sir Charles Warren and the Chief Khame, May 13,
 G. Proposals of the Chief Khame, May 13, 1885; with map accompanying.
 H. Proposals of the Chief Sechele, May 25, 1885.
 I.Proposals of the Chief Ghasitsive, May 29, 1885.
-I have, &c.,
+I have, &amp;c.,
 (Signed) C<span class="small">HARLES</span> W<span class="small">ARREN</span>,
 His Excellency Special Commissioner.
 the Right Hon. Sir H. Robinson, G.C.M.G.,
-&c. &c. &c.
+&amp;c. &amp;c. &amp;c.
 
 A.
 R<span class="small">ESULT OF</span> I<span class="small">NTERVIEW</span> between Sir C<span class="small">HARLES</span> W<span class="small">ARREN</span>, Her Britannic Majesty's Special
@@ -399,7 +399,7 @@ at the same time we would like to see how you work out your principles with refe
 to these three Chiefs and the murdered Englishman before we can say we are glad at
 your news. I have nothing further to say, but I am glad at the words you have spoken,
 but look to see distinctly how you deal with the matters you have in hand.
-<em>Sir C. Warren.ーTell the Chief we are accustomed to speak plainly in our country,
+<em>Sir C. Warren</em>.ーTell the Chief we are accustomed to speak plainly in our country,
 and I am sure that the Queen will be pleased to hear that he has spoken out, and it is
 right that he should say what he thinks. The general difficulty in these matters is that
 people do not speak their minds, and say what they have to say. I think what he has
@@ -515,7 +515,7 @@ to trek westward, and in the event of their not being able to take the Bamangwat
 they intend coming through my country. He says his traders have but little ammunition
 on hand, and trusts you will not leave him without presenting him with means to defend
 his country.
-We have, &c.,
+We have, &amp;c.,
 (Signed) B<span class="small">OYNE</span>, G<span class="small">RAY</span>, and W<span class="small">ALKER</span> (for
 S<span class="small">ECHELE</span>.)
 
@@ -683,7 +683,7 @@ Her Majesty the papers he has made. I am very glad to hear of the improvements t
 45
 629
 
-Chief thinks of making in roads, bridges, &c; as, if carried out, they cannot fail to enrich
+Chief thinks of making in roads, bridges, &amp;c; as, if carried out, they cannot fail to enrich
 the country ; and I shall put forward in the strongest terms the views he has of stopping
 strong drink coming into the country.
 With regard to the question of the Northern boundary I cannot speak now, as the
@@ -786,7 +786,7 @@ and I add, let us work together, let me also approve of those who are received.
 (Signed) K<span class="small">HAME</span>. (Signed) K<span class="small">UATI</span>
 
 ( ,, ) S<span class="small">EVETSE</span>. this
-( ,, )U<span class="small">PHOENG</span>. M<em>ATOLSOTE</span> X
+( ,, )U<span class="small">PHOENG</span>. M<span class="small">ATOLSOTE</span> X
 ( ,, ) I<span class="small">KITIRENG</span>. mark.
 ( ,,) R<span class="small">ADITLADI</span>.
 His M<span class="small">OLOINGANE</span>
@@ -811,7 +811,7 @@ K<span class="small">GOTHOOCHO</span> X mark. mark.his
 M<span class="small">OTSHEQUWE</span> X
 (Signed) R<span class="small">AMPODIE</span>
 his
-T<span class="small">ORONGANE</span> X R<em>ANI</span> X
+T<span class="small">ORONGANE</span> X R<span class="small">ANI</span> X
 mark.
 his
 K<span class="small">AMODISA</span> X M<span class="small">OKGETHI</span> X
@@ -825,27 +825,27 @@ mark. mark.
 47
 631
 his his
-M<em>OKOWANI</span> X T<span class="small">HOGANE</span> X
+M<span class="small">OKOWANI</span> X T<span class="small">HOGANE</span> X
 mark. mark.
 his his
-P<em>HITTWE</span> X M<span class="small">OOKODI</span> X
+P<span class="small">HITTWE</span> X M<span class="small">OOKODI</span> X
 mark. mark.
 his his
-N<span class="small">OANVOADICKMEWE</em> X L<span class="small">ETHAKU</span> X
+N<span class="small">OANVOADICKMEWE</span> X L<span class="small">ETHAKU</span> X
 mark.
 mark.
 His (Signed) N<span class="small">KOBELE</span>.
-M<span class="small">OPI</em> X ( ,, ) M<span class="small">OROA</span>.
+M<span class="small">OPI</span> X ( ,, ) M<span class="small">OROA</span>.
 Mark. ( ,. ) G<span class="small">UBUSATU</span>.
-M<em>OTHELWA</span> X M<span class="small">OTHIBO</span> mark. X
-(Signed) K<em>GOSIEGAU</span>. mark.his
+M<span class="small">OTHELWA</span> X M<span class="small">OTHIBO</span> mark. X
+(Signed) K<span class="small">GOSIEGAU</span>. mark.his
 His M<span class="small">OGKWATHI</span> X
 M<span class="small">OTHOESI</span> X mark.
-mark. (Signed) M<span class="small">UALIFIIE.
+mark. (Signed) M<span class="small">UALIFIIE</span>.
 Signed in Kgotha.
 Witnesssed by :ー
 (Signed) E<span class="small">DWIN</span> L<span class="small">LOYD</span>.
-( ,, ) G<span class="small">EORGE</span> B<span class="small">ADEN</span>-P<span class="small">OWELL.
+( ,, ) G<span class="small">EORGE</span> B<span class="small">ADEN</span>-P<span class="small">OWELL</span>.
 ( ,, )F<span class="small">RANK</span> W<span class="small">HITELY</span>.
 Translated from the Sechuana by--
 (Signed) J<span class="small">OHN</span> M<span class="small">ACKENZIE</span>.
@@ -931,7 +931,7 @@ his
 B<span class="small">OME</span> X
 mark.
 his
-T<span class="small">ELEKELEO<span class="small"> X
+T<span class="small">ELEKELEO</span> X
 mark.
 his
 M<span class="small">ASEU</span> X
@@ -947,7 +947,7 @@ M<span class="small">OISAKAMO</span> X
 mark.
 Witnesses :ー 
 (Signed) B. C. F<span class="small">HERE</span>.
-( " ) G<span class="small">EORGE</span> B<span class="small">ADEN</span>-P<span class="small">OWELL</span>.</p>
+( " ) G<span class="small">EORGE</span> B<span class="small">ADEN</span>-P<span class="small">OWELL</span>.
 </section>
 
 <!-- start seg 3 -->
