--- a/html/recovering-histories/botswana/liv_022004_HTML.html
+++ b/html/recovering-histories/botswana/liv_022004_HTML.html
@@ -67,7 +67,105 @@
 
 <section class="recovering-histories">
 
-<!-- page 1 -->
+<p class="center halfbottommargin">36</p>
+
+<p class="center">No. 34.</p>
+
+<p class="center">The R<span class="small">IGHT</span> H<span class="small">ON</span>. <span class="caps">SIR HERCULES ROBINSON</span>, G.C.M.G., to the R<span class="small">IGHT</span> H<span class="small">ON</span>.
+<span class="caps"><span class="small">THE</span> EARL OF DERBY</span>, K.G. &nbsp;&nbsp;&nbsp; (Received July 15, 1885.)</p>
+
+<p class="noindent">M<span class="small">Y</span> <span class="caps">L<span class="small">ORD</span></span>, <span class="right right1">Government House, Capetown, June 24, 1885.</span></p>
+
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I <span class="small">HAVE</span> the honour to enclose, for your information, a copy of a despatch which
+I have received from Sir Charles Warren, covering reports of interviews with the
+Chiefs Ghasitsive, Sechele, and Khama.</p>
+
+<p class="center doubleleftmargin">I have, &amp;c.,</p>
+
+<p class="right right2">(Signed) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="caps">HERCULES ROBINSON</span>,</p>
+
+<p><span class="right right1">High Commissioner.</span></p>
+
+<p>The Right Hon. the Earl of Derby, K.G., <span class="right right1">High Commissioner.</span></p>
+
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&amp;c. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&amp;c. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&amp;c.</p>
+
+<hr class="milestone quarterline center">
+
+<p class="center">Enclosure in No. 34.</p>
+
+<p class="center">S<span class="small">IR</span> C. W<span class="small">ARREN</span> to H<span class="small">IGH</span> C<span class="small">OMMISSIONER</span>.</p>
+
+<p class="noindent">S<span class="small">IR</span>, <span class="right right1">Mafeking, June 4, 1885.</span></p>
+
+<p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;I <span class="small">HAVE</span> the honour to forward herewith, for the information of the Secretary of
+State, the following documents with reference to my visit to the Chiefs Ghasitsive,
+Sechele, and Khame, and their proposals as to the future of their territories.</p>
+
+<ol class="overhanglist" type="A">
+  <li>Account of interview between Sir Charles Warren and the Chief Ghasitsive,
+  April 24, 1885.</li>
+
+  <li>Account of interview between Sir C. Warren and the Chief Sechele, April 27,
+  1885.</li>
+
+  <li>Proposals of the Chief Sechele, April 28, 1885.</li>
+
+  <li>Letter from the Chief Sechele, written by Messieurs Boyne, Gray, and Walker,
+  April 28, 1885.</li>   
+
+  <li>Account of interview between Sir Charles Warren and Chief Khame, May 12,
+  1885.</li>
+
+  <li>Account of interview between Sir Charles Warren and the Chief Khame,
+  May 13, 1885.</li>
+
+  <li>Proposals of the Chief Khame, May 13, 1885; with map accompanying.</li>
+
+  <li>Proposals of the Chief Sechele, May 25, 1885.</li>
+
+  <li>Proposals of the Chief Ghasitsive, May 29, 1885.</li>
+</ol>
+
+<p class="right right10">I have, &amp;c.,</p>
+
+<p class="right right4">(Signed) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;C<span class="small">HARLES</span> W<span class="small">ARREN</span>,</p>
+<p class="right right2">Special Commissioner.</p>
+
+<p>His Excellency<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;the Right Hon. Sir H. Robinson, G.C.M.G.,<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&amp;c. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&amp;c. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&amp;c.</p>
+
+<hr class="milestone halfline quarterline center">
+
+<p class="center">A.</p>
+
+<p class="center halfbottommargin">R<span class="small">ESULT OF</span> I<span class="small">NTERVIEW</span> between Sir C<span class="small">HARLES</span> W<span class="small">ARREN</span>, Her Britannic Majesty's Special
+Commissioner, and the Chief G<span class="small">HASITSIVE</span>, April 24, 1885.</p>
+
+<p>There were present Ghasitsive, his son Bathoen, and several councillors.</p>
+
+<p>After some conversation Sir Charles Warren said that, before going on to Sechele's, there
+was one point on which he wished to speak, and that was the drinking which took
+place in the territory. He saw that drinking was going on to a very great extent, and
+wished to know what the views of the Chief were on the subject.</p>
+
+<p><em>Ghasitsive</em> replied that he had an opinion that it was not good for the people, but he
+had tried to do away with it on several occasions, and had not succeeded, but hoped with
+Sir C. Warren's assistance it might be done.</p>
+
+<p><em>Bathoen</em> stated that he had on several occasions tried to do away with liquor traffic in
+his territory, and each time it had been ineffectual, but if the General would help him
+it might be done. The traders represented that they had invested money in the liquor,
+and that the Government would be angry if their trade was interfered with, or if the
+drink was sent away or destroyed.</p>
+
+<p><em>Ghasitsive</em> observed, From whom does the liquor come?</p>
+
+<p><em>Sir C. Warren</em>.&mdash;It comes from the white man, but he would not send it if the black
+man did not drink it. If the white man were to bring up kegs of castor oil, would</p>
+
+<!-- page 1 --> <!--
 36
 
 No. 34.
@@ -133,7 +231,7 @@ drink was sent away or destroyed.
 man did not drink it. If the white man were to bring up kegs of castor oil, would
 
 
-<!-- page 2 -->
+--> <!-- 2 --> <!--
 37
 62,
 they sell it as they did liquor ? No ! because the black man does not want it every day
@@ -202,7 +300,7 @@ Montsioa's ?
 E 3
 
 
-<!-- page 3 -->
+--> <!-- 3 --> <!--
 38
 <em>Sebeli</em>.一A stem-buck cannot protect itself, but God protects it and lets it live.
 <em>Sir C. Warren</em>.一Was it the same with you when you came here as refugees fleeing
@@ -271,7 +369,7 @@ feel assured I am an Englishman.
 
 
 
-<!-- page 4 -->
+--> <!-- 4 --> <!--
 39
 623
 <em>Sir C. Warren</em>.ー(To Sechele.) During the latter disturbance in Montsion' country,
@@ -341,7 +439,7 @@ protection, but if there is to be a paying of taxes, then it is another thing.
 E 4
 
 
-<!-- page 5 -->
+--> <!-- 5 --> <!--
 40
 <em>Headman No. 1</em>.ーI think Kosi Lontswe has spoken well. (Here Sechele interrupts
 him.)
@@ -409,7 +507,7 @@ When Mankoroane, Montsioa, Ghasitsive are resuscitated, then we shall see the re
 a Protectorate, and there will not be one dissentient voice against it in the whole tribe.
 
 
-<!-- page 6 -->
+--> <!-- 6 --> <!--
 41
 625
 I have some dealings with the Boers, buying and selling mealies, dogs, and cattle; but I
@@ -479,7 +577,7 @@ camp to play off against me directly you go away. In any case, are we not in the
 A 17830. F
 
 
-<!-- page 7 -->
+--> <!-- 7 --> <!--
 42
 tent ? Am I not within the bounds of the Protectorate? I know it is established but
 as to the numerous questions springing out of it, I wish to leave them all till we see how
@@ -541,7 +639,7 @@ liquor had been introduced into these territories, and many of the rich people h
 acquired a longing for strong drink, and would sell all or anything they had to obtain
 
 
-<!-- page 8 -->
+--> <!-- 8 --> <!--
 43
 624
 it. First their oxen, then their karosses would go, and they would trump up their
@@ -611,7 +709,7 @@ will sell the country. We should be glad if the Queen gave our Chief a large tra
 F2
 
 
-<!-- page 9 -->
+--> <!-- 9 --> <!--
 44
 country. Our Chief was born to have a large tract of country. In the early days our
 Chief's first desire was to keep liquor out of the country. We know if the drink comes
@@ -679,7 +777,7 @@ Her Majesty the papers he has made. I am very glad to hear of the improvements t
 
 
 
-<!-- page 10 -->
+--> <!-- 10 --> <!--
 45
 629
 
@@ -747,7 +845,7 @@ thought how this can be done ; I mean plans which can be thought out at the begi
 F3
 
 
-<!-- page 11 -->
+--> <!-- 11 --> <!--
 46
 so that the Queen's people may all be pleasedーthe black people and the white people. I
 propose that a certain country of known dimensions should be mine and my people's for our
@@ -821,7 +919,7 @@ M<span class="small">OLIA</span> X R<span class="small">AMOGABELEO</span> X
 mark. mark.
 
 
-<!-- page 12 -->
+--> <!-- 12 --> <!--
 47
 631
 his his
@@ -884,7 +982,7 @@ J<span class="small">OHN</span> M<span class="small">ACKENZIE</span>.
 F4
 
 
-<!-- page 13 -->
+--> <!-- 13 --> <!--
 48
 I.
 P<span class="small">ROPOSALS</span> of the Chief G<span class="small">HASITSIVE</span>, 29th May 1885.
@@ -948,7 +1046,7 @@ mark.
 Witnesses :ー 
 (Signed) B. C. F<span class="small">HERE</span>.
 ( " ) G<span class="small">EORGE</span> B<span class="small">ADEN</span>-P<span class="small">OWELL</span>.
-</section>
+</section> -->
 
 <!-- start seg 3 -->
 </div>
