--- a/html/recovering-histories/botswana/liv_022004_HTML.html
+++ b/html/recovering-histories/botswana/liv_022004_HTML.html
@@ -67,11 +67,13 @@
 
 <section class="recovering-histories">
 
-<p class="center halfbottommargin">36</p>
+ <!-- page break -->
 
-<p class="center">No. 34.</p>
+<fw class="center halfbottommargin">36</fw>
 
-<p class="center">The R<span class="small">IGHT</span> H<span class="small">ON</span>. <span class="caps">SIR HERCULES ROBINSON</span>, G.C.M.G., to the R<span class="small">IGHT</span> H<span class="small">ON</span>.
+<p class="center noindent">No. 34.</p>
+
+<p class="center noindent">The R<span class="small">IGHT</span> H<span class="small">ON</span>. <span class="caps">SIR HERCULES ROBINSON</span>, G.C.M.G., to the R<span class="small">IGHT</span> H<span class="small">ON</span>.
 <span class="caps"><span class="small">THE</span> EARL OF DERBY</span>, K.G. &nbsp;&nbsp;&nbsp; (Received July 15, 1885.)</p>
 
 <p class="noindent">M<span class="small">Y</span> <span class="caps">L<span class="small">ORD</span></span>, <span class="right right1">Government House, Capetown, June 24, 1885.</span></p>
@@ -80,7 +82,7 @@
 I have received from Sir Charles Warren, covering reports of interviews with the
 Chiefs Ghasitsive, Sechele, and Khama.</p>
 
-<p class="center doubleleftmargin">I have, &amp;c.,</p>
+<p class="center noindent doubleleftmargin">I have, &amp;c.,</p>
 
 <p class="right right2">(Signed) &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="caps">HERCULES ROBINSON</span>,</p>
 
@@ -92,9 +94,9 @@ Chiefs Ghasitsive, Sechele, and Khama.</p>
 
 <hr class="milestone quarterline center">
 
-<p class="center">Enclosure in No. 34.</p>
+<p class="center noindent">Enclosure in No. 34.</p>
 
-<p class="center">S<span class="small">IR</span> C. W<span class="small">ARREN</span> to H<span class="small">IGH</span> C<span class="small">OMMISSIONER</span>.</p>
+<p class="center noindent">S<span class="small">IR</span> C. W<span class="small">ARREN</span> to H<span class="small">IGH</span> C<span class="small">OMMISSIONER</span>.</p>
 
 <p class="noindent">S<span class="small">IR</span>, <span class="right right1">Mafeking, June 4, 1885.</span></p>
 
@@ -102,7 +104,7 @@ Chiefs Ghasitsive, Sechele, and Khama.</p>
 State, the following documents with reference to my visit to the Chiefs Ghasitsive,
 Sechele, and Khame, and their proposals as to the future of their territories.</p>
 
-<ol class="overhanglist" type="A">
+<ol class="overhang" type="A">
   <li>Account of interview between Sir Charles Warren and the Chief Ghasitsive,
   April 24, 1885.</li>
 
@@ -138,9 +140,9 @@ Sechele, and Khame, and their proposals as to the future of their territories.</
 
 <hr class="milestone halfline quarterline center">
 
-<p class="center">A.</p>
+<p class="center noindent">A.</p>
 
-<p class="center halfbottommargin">R<span class="small">ESULT OF</span> I<span class="small">NTERVIEW</span> between Sir C<span class="small">HARLES</span> W<span class="small">ARREN</span>, Her Britannic Majesty's Special
+<p class="center noindent halfbottommargin">R<span class="small">ESULT OF</span> I<span class="small">NTERVIEW</span> between Sir C<span class="small">HARLES</span> W<span class="small">ARREN</span>, Her Britannic Majesty's Special
 Commissioner, and the Chief G<span class="small">HASITSIVE</span>, April 24, 1885.</p>
 
 <p>There were present Ghasitsive, his son Bathoen, and several councillors.</p>
@@ -162,8 +164,135 @@ drink was sent away or destroyed.</p>
 
 <p><em>Ghasitsive</em> observed, From whom does the liquor come?</p>
 
-<p><em>Sir C. Warren</em>.&mdash;It comes from the white man, but he would not send it if the black
+<p><em>Sir C. Warren</em>.—It comes from the white man, but he would not send it if the black
 man did not drink it. If the white man were to bring up kegs of castor oil, would</p>
+
+<!-- page break -->
+
+<fw class="center">37</fw>  
+
+<p class="noindent">they sell it as they did liquor ? No ! because the black man does not want it every day
+in such large quantities. Are you not aware how the tribes have always suffered for
+the drink ?</p>
+
+<p><em>Ghasitsive</em>.—Tell me what has happened.</p>
+
+<p><em>Sir C. Warren</em>.—Do you not know that Mankoroane and Moshette assert that they
+have been made drunk, and have signed away farms when not knowing what they were
+about ? When you have sent away liquor, how have you proceeded ?</p>
+
+<p><em>Ghasitsive</em>.—I have ordered it out of the territory.</p>   
+
+<p><em>Sir C. Warren</em>.—And then what has happened ?</p>
+
+<p><em>Ghasitsive</em>.—They have brought it back again. I cannot stop them.</p>
+
+<p><em>Sir C. Warren</em>.—I suppose we are all agreed that this liquor traffic should not
+continue ; now if you will order your people not to buy, I will take measures to prevent
+the liquor being sold.</p>
+
+<p><em>Bathoen</em>.—That is just what we want. We give orders, and our people go down in the
+night and buy it.</p>
+
+<p><em>Sir C. Warren</em>.—If you issue an order to your people not to buy, I will send down
+an order this morning to the traders that all liquor must be out of the territory by the
+14th May, and that from to-day no liquor must be sold.</p>
+
+<p><em>Bathoen</em>.—That is just what my father wants.</p>
+
+<p><em>Ghasitsive</em>.—I will order my people not to drink any more ; but explain to me how
+  it injures the people. This is a weighty question.</p>
+
+<p><em>Sir C. Warren</em>.—Take the case of a single man, and you will see what it does for the
+whole tribe. Take a prosperous man who takes too much, and gets to like it : he sells
+his oxen and waggon, his hat, and his coat, and then his trousers (<em>Ghasitsive</em>—and his
+boots), and then he hires out his wife, and disease follows, and then death.</p>
+
+<p>The party then separated.</p>
+
+<hr class="milestone halfline quarterline center">
+
+<p class="center noindent">B.</p>
+
+<p class="center noindent">I<span class="small">NTERVIEW BETWEEN</span> S<span class="small">IR</span> C. W<span class="small">ARREN</span> and the Chief S<span class="small">ECHELE</span> of Bakwena at Court
+Yard, Molepolole, April 27, 1885.</p>
+
+<p class="overhang">Present : Chief Sechele and his two sons Sebeli and Kari, Kosi Lintse Chief's brother,
+headmen and several hundred of the Bakwena tribe ; Sir Charles Warren, Mr. Mac-
+kenzie, Mr. Sam Edwards, Mr. Baden-Powell, and others.</p>
+
+<p><em>Sir C. Warren</em>.—I have been desired by the Queen's Government to give you the
+following notification. The Queen's Government has established a Protectorate over
+the part of Bechuanaland and the Kalahari west of the Transvaal, north of the Cape
+Colony, and westward towards Namaqualand.</p>
+
+<p><em>Sechele</em>.—Has the Chief nothing more to tell us ?</p> 
+
+<p><em>Sir C. Warren</em>.—No.</p>
+
+<p><em>Sebeli</em>.—What in us has brought this on, that the country should be taken from us ?</p>   
+
+<p><em>Sir C. Warren</em>.—Does Sebeli know what it means by the country being taken ?</p>   
+
+<p><em>Sebeli</em>.—Seeing what I now know, the boundary line running northwards about Tati
+and round west in the Kalahari takes us all in, therefore it is that I ask, what in us has
+brought this on ?</p>
+
+<p><em>Sir C. Warren</em>.—But does Sebeli know what being taken means ?</p>
+
+<p><em>Sebeli</em>.—I have been told, and I have seen it in the papers, that our country is taken,
+and we the Bakwena were never consulted ; therefore I ask why it has been taken.</p>
+
+<p><em>Sir C. Warren</em>.—I said that a Protectorate had been established, I did not say the
+country had been taken from them.</p>
+
+<p><em>Sebeli</em>.—What is the Protectorate for ?</p>   
+
+<p><em>Sir C. Warren</em>.—Does Sebeli consider his tribe require no protection ?</p>   
+
+<p><em>Sebeli</em>.—What is meant by protection ?</p>
+
+<p><em>Sir C. Warren</em>.—The protection may mean protection from the inside or protection
+from the outside.</p>
+
+<p><em>Sebeli</em>.—When a man takes a shield and holds it up, he holds it up against something ;
+what is it that we are to be protected against ?</p>
+
+<p><em>Sir C. Warren</em>.—Is there nothing you want protection against ?</p> 
+
+<p><em>Sebeli</em>.—You may see it, but we the Bakwenas do not see it yet.</p>
+
+<p><em>Sir C. Warren</em>.—Does Sebeli know what has just taken place down to the south at
+Montsioa's ?</p>
+
+<p><em>Sebeli</em>,—We, the Bakwena, are not Baralongs.</p> 
+
+<p><em>Sir C. Warren</em>.—What does Sebeli mean ?</p>
+
+<p class="center noindent">E 3</p>
+
+<!-- page break-->
+
+<p><em>Sebeli</em>.—A stem-buck cannot protect itself, but God protects it and lets it live.</p>
+
+<p><em>Sir C. Warren</em>.—Was it the same with you when you came here as refugees fleeing
+from the Boers ?</p>
+
+<p><em>Sebeli</em>.—A stem-buck gets into difficulties, but when it does so it must get out of
+them, and God helps it to do so.</p>
+
+<p><em>Sir C. Warren</em>.— Then does Sebeli wish me to tell the Queen that the Bakwena are
+strong enough to protect themselves ?</p>
+
+<p><em>Sebeli</em>.—We do not want any protection ; we feel strong enough to protect ourselves.</p>
+
+<p><em>Sir C. Warren</em>—Supposing we leave here to-day, and to-morrow the Bakwena cattle
+are all swept away, what then ?</p> 
+
+<p><em>Scheli</em>.— I have spoken of myself. There are others—Bakwena—who will now speak,
+but for myself I want no protetion.</p>
+
+<p><em>Kosi Lintse</em>, the King's brother. (To Sir C. Warren.) We hear you bring news which</p>
 
 <!-- page 1 --> <!--
 36
@@ -227,7 +356,7 @@ it might be done. The traders represented that they had invested money in the li
 and that the Government would be angry if their trade was interfered with, or if the
 drink was sent away or destroyed.
 <em>Ghasitsive</em> observed, From whom does the liquor come?
-<em>Sir C. Warren</em>.一It comes from the white man, but he would not send it if the black
+<em>Sir C. Warren</em>.—It comes from the white man, but he would not send it if the black
 man did not drink it. If the white man were to bring up kegs of castor oil, would
 
 
@@ -237,27 +366,27 @@ man did not drink it. If the white man were to bring up kegs of castor oil, woul
 they sell it as they did liquor ? No ! because the black man does not want it every day
 in such large quantities. Are you not aware how the tribes have always suffered for
 the drink ?
-<em>Ghasitsive</em>.一Tell me what has happened.
-<em>Sir C. Warren</em>.一Do you not know that Mankoroane and Moshette assert that they
+<em>Ghasitsive</em>.—Tell me what has happened.
+<em>Sir C. Warren</em>.—Do you not know that Mankoroane and Moshette assert that they
 have been made drunk, and have signed away farms when not knowing what they were
 about ? When you have sent away liquor, how have you proceeded ?
-<em>Ghasitsive</em>.一I have ordered it out of the territory.
+<em>Ghasitsive</em>.—I have ordered it out of the territory.
 <em>Sir C. Warren</em>.-And then what has happened ?
-<em>Ghasitsive</em>.一They have brought it back again. I cannot stop them.
-<em>Sir C. Warren</em>.一I suppose we are all agreed that this liquor traffic should not
+<em>Ghasitsive</em>.—They have brought it back again. I cannot stop them.
+<em>Sir C. Warren</em>.—I suppose we are all agreed that this liquor traffic should not
 continue ; now if you will order your people not to buy, I will take measures to prevent
 the liquor being sold.
-<em>Bathoen</em>.一That is just what we want. We give orders, and our people go down in the
+<em>Bathoen</em>.—That is just what we want. We give orders, and our people go down in the
 night and buy it.
-<em>Sir C. Warren</em>.一If you issue an order to your people not to buy, I will send down
+<em>Sir C. Warren</em>.—If you issue an order to your people not to buy, I will send down
 an order this morning to the traders that all liquor must be out of the territory by the
 14th May, and that from to-day no liquor must be sold.
-<em>Bathoen</em>.一That is just what my father wants.
-<em>Ghasitsive</em>.一I will order my people not to drink any more ; but explain to me how
+<em>Bathoen</em>.—That is just what my father wants.
+<em>Ghasitsive</em>.—I will order my people not to drink any more ; but explain to me how
 it injures the people. This is a weighty question.
-<em>Sir C. Warren</em>.一Take the case of a single man, and you will see what it does for the
+<em>Sir C. Warren</em>.—Take the case of a single man, and you will see what it does for the
 whole tribe. Take a prosperous man who takes too much, and gets to like it : he sells
-his oxen and waggon, his hat, and his coat, and then his trousers (<em>Ghasitsive</em>一and his
+his oxen and waggon, his hat, and his coat, and then his trousers (<em>Ghasitsive</em>—and his
 boots), and then he hires out his wife, and disease follows, and then death.
 The party then separated.
 
@@ -268,51 +397,51 @@ Yard, Molepolole, April 27, 1885.
 Present : Chief Sechele and his two sons Sebeli and Kari, Kosi Lintse Chief's brother,
 headmen and several hundred of the Bakwena tribe ; Sir Charles Warren, Mr. Mac-
 kenzie, Mr. Sam Edwards, Mr. Baden-Powell, and others.
-<em>Sir C. Warren</em>.一I have been desired by the Queen's Government to give you the
+<em>Sir C. Warren</em>.—I have been desired by the Queen's Government to give you the
 following notification. The Queen's Government has established a Protectorate over
 the part of Bechuanaland and the Kalahari west of the Transvaal, north of the Cape
 Colony, and westward towards Namaqualand.
-<em>Sechele</em>.一Has the Chief nothing more to tell us ?
-<em>Sir C. Warren</em>.一No.
-<em>Sebeli</em>.一What in us has brought this on, that the country should be taken from us ?
+<em>Sechele</em>.—Has the Chief nothing more to tell us ?
+<em>Sir C. Warren</em>.—No.
+<em>Sebeli</em>.—What in us has brought this on, that the country should be taken from us ?
 <em>Sir C. Warren</em>.-Does Sebeli know what it means by the country being taken ?
-<em>Sebeli</em>.一Seeing what I now know, the boundary line running northwards about Tati
+<em>Sebeli</em>.—Seeing what I now know, the boundary line running northwards about Tati
 and round west in the Kalahari takes us all in, therefore it is that I ask, what in us has
 brought this on ?
-<em>Sir C. Warren</em>.一But does Sebeli know what being taken means ?
-<em>Sebeli</em>.一 have been told, and I have seen it in the papers, that our country is taken,
+<em>Sir C. Warren</em>.—But does Sebeli know what being taken means ?
+<em>Sebeli</em>.— have been told, and I have seen it in the papers, that our country is taken,
 and we the Bakwena were never consulted ; therefore I ask why it has been taken.
-<em>Sir C. Warren</em>.一I said that a Protectorate had been established, I did not say the
+<em>Sir C. Warren</em>.—I said that a Protectorate had been established, I did not say the
 country had been taken from them.
-<em>Sebeli</em>.一What is the Protectorate for ?
-<em>Sir C. Warren</em>.一Does Sebeli consider his tribe require no protection ?
+<em>Sebeli</em>.—What is the Protectorate for ?
+<em>Sir C. Warren</em>.—Does Sebeli consider his tribe require no protection ?
 <em>Sebeli</em>.-What is meant by protection ?
-<em>Sir C. Warren</em>.一The protection may mean protection from the inside or protection
+<em>Sir C. Warren</em>.—The protection may mean protection from the inside or protection
 from the outside.
-<em>Sebeli</em>. 一When a man takes a shield and holds it up, he holds it up against something ;
+<em>Sebeli</em>. —When a man takes a shield and holds it up, he holds it up against something ;
 what is it that we are to be protected against ?
-<em>Sir C. Warren</em>.一Is there nothing you want protection against ?
-<em>Sebeli</em>.一You may see it, but we the Bakwenas do not see it yet.
-<em>Sir C. Warren</em>.一Does Sebeli know what has just taken place down to the south at
+<em>Sir C. Warren</em>.—Is there nothing you want protection against ?
+<em>Sebeli</em>.—You may see it, but we the Bakwenas do not see it yet.
+<em>Sir C. Warren</em>.—Does Sebeli know what has just taken place down to the south at
 Montsioa's ?
-<em>Sebeli</em>,一We, the Backwena, are not Baralougs.
-<em>Sir C. Warren</em>.一What does Sebeli mean ?
+<em>Sebeli</em>,—We, the Backwena, are not Baralougs.
+<em>Sir C. Warren</em>.—What does Sebeli mean ?
 E 3
 
 
 --> <!-- 3 --> <!--
 38
-<em>Sebeli</em>.一A stem-buck cannot protect itself, but God protects it and lets it live.
-<em>Sir C. Warren</em>.一Was it the same with you when you came here as refugees fleeing
+<em>Sebeli</em>.—A stem-buck cannot protect itself, but God protects it and lets it live.
+<em>Sir C. Warren</em>.—Was it the same with you when you came here as refugees fleeing
 from the Boers ?
-<em>Sebeli</em>.一A stem-buck gets into difficulties, but when it does so it must get out of
+<em>Sebeli</em>.—A stem-buck gets into difficulties, but when it does so it must get out of
 them, and God helps it to do so.
-<em>Sir C. Warren</em>.一 Then does Sebeli wish me to tell the Queen that the Bakwena are
+<em>Sir C. Warren</em>.— Then does Sebeli wish me to tell the Queen that the Bakwena are
 strong enough to protect themselves ?
-<em>Sebeli</em>.一We do not want any protection ; we feel strong enough to protect ourselves.
-<em>Sir C. Warren</em>一Supposing we leave here to-day, and to-morrow the Bakwena cattle
+<em>Sebeli</em>.—We do not want any protection ; we feel strong enough to protect ourselves.
+<em>Sir C. Warren</em>—Supposing we leave here to-day, and to-morrow the Bakwena cattle
 are all swept away, what then ?
-<em>Scheli</em>.一 I have spoken of myself. There are others一Bakwena一who will now speak,
+<em>Scheli</em>.— I have spoken of myself. There are others—Bakwena—who will now speak,
 but for myself I want no protetion.
 <em>Kosi Lintse</em>, the King's brother. (To Sir C. Warren.) We hear you bring news which
 is familiar to our cars. You say we were attacked by the Boers. They did attack us
@@ -357,12 +486,12 @@ but if you talk of protection, inasmuch as that is what we have been long waitin
 from the time we were attacked by the Boers, I, the Makwana, say, “ Yes, that is what
 “ we always wanted." I hear nothing you have said to-day to make my heart sore.
 I hear merely the words which we asked for in the olden time.
-<em>General Warren</em>.一When the Kosi talks of protection against the Boers, what does
+<em>General Warren</em>.—When the Kosi talks of protection against the Boers, what does
 he mean ?
-<em>Kosi Lintse</em>一-[ mean the Boers under Paul Kruger and Piet Scholtz.
-<em>General Warren</em>.一Does he mean the Transvaal Government, or people coming from
+<em>Kosi Lintse</em>—-[ mean the Boers under Paul Kruger and Piet Scholtz.
+<em>General Warren</em>.—Does he mean the Transvaal Government, or people coming from
 the Transvaal though not under it ?
-<em>Kosi Linise</em>.一I did not know they had a Government at that time. We were very
+<em>Kosi Linise</em>.—I did not know they had a Government at that time. We were very
 poor, and used to exchange ivory for cattle. A man named Hendrich Potgieter came
 to buy ivory. We were told he was the Boer chief. I have no more to say, but that I
 feel assured I am an Englishman.
